# team7

./: .env.example  Dockerfile.migrations  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f67e452212c9_initial.py
artifacts-service/: Dockerfile  pyproject.toml  s3_create_bucket.py
artifacts-service/alembic/: env.py
artifacts-service/alembic/versions/: 9cf0d9997170_initial.py
artifacts-service/app/: __init__.py  api.py  clients.py  config.py  database.py  models.py  schemas.py  security.py
core-service/: .env.example  .gitignore  =2.0.45  docker-compose.yml  main.py  pyproject.toml  service_description.txt  start.sh  start_postgres.sh  start_s3.sh
core-service-frontend/: Dockerfile  README.md  index.html  package.json  runs.html  style.css  vite.config.js
core-service-frontend/src/: App.css  App.jsx
core-service-frontend/src/components/Alert/: Alert.css  Alert.jsx
core-service-frontend/src/components/Button/: Button.css  Button.jsx
core-service-frontend/src/components/Card/: Card.css  Card.jsx
core-service-frontend/src/components/Input/: Input.css  Input.jsx
core-service-frontend/src/components/Layout/: Layout.css  Layout.jsx
core-service-frontend/src/components/ProtectedRoute/: ProtectedRoute.jsx
core-service-frontend/src/context/: AuthContext.jsx
core-service-frontend/src/pages/Datasets/: Datasets.css  Datasets.jsx
core-service-frontend/src/pages/Home/: Home.css  Home.jsx
core-service-frontend/src/pages/Login/: Login.jsx
core-service-frontend/src/pages/Register/: Register.css  Register.jsx
core-service-frontend/src/services/: api.js
core-service/alembic/: env.py
core-service/alembic/versions/: da06ce7e2a47_initial.py
core-service/app/: __init__.py  api.py  clients.py  config.py  database.py  kafka_client.py  models.py  schemas.py  security.py
train-service/: .gitignore  Dockerfile  pyproject.toml
train-service/app/: config.py  main.py  message.json
train-service/src/: config.py  main.py  model_specs.py
